* src/ftdump.c (main): New command line option `c' to show the contents of charmaps. (Print_Charmaps): Take one more argument: `verbose'.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-11-30  Chia-I Wu  <b90201047@ntu.edu.tw>
+
+	* src/ftdump.c (main): New command line option `c' to show the
+	contents of charmaps.
+	(Print_Charmaps): Take one more argument: `verbose'.
+
 2005-11-21  Werner Lemberg  <wl@gnu.org>
 
 	* graph/grinit.c (grDoneDevices): New function.
