--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-12-02  Chia-I Wu  <b90201047@ntu.edu.tw>
+
+	Overhaul `ftbench.'  Now it can perform tests with arbitrary load
+	flags and render mode.  Testing `Render' instead of `Load + Render',
+	for example, is also possible now.
+
+	* src/ftbench.c: Overhauled.
+
 2005-11-30  Werner Lemberg  <wl@gnu.org>
 
 	Replace flag `-c' with `-v' to indicate verbosity.
