--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-12-08  Chia-I Wu  <b90201047@ntu.edu.tw>
+
+	* src/ftview.c (error_message): Renamed to write_header.
+	Also write face size, first glyph index.
+	Write glyph name if available.
+	(main): Updated to use write_header.
+
 2005-12-04  Chia-I Wu  <b90201047@ntu.edu.tw>
 
 	* src/ftbench.c: Update copyright date.
