--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-03-20  David Turner  <david@freetype.org>
+
+    * src/ftview.c: disabling cache statistics dump, since the cache
+    internals are not available anymore
+
+    * src/ftview.c: adding new option flags "-m" and "-l"
+
 2006-03-02  Chia-I Wu  <b90201047@ntu.edu.tw>
 
 	* src/ftcommon.c (string_render_prepare): Fix a possible crash.
