--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2006-05-02  David Turner <david@freetype.org>
 
+        * src/ftcommon.c, src/ftcommon.h, src/ftview.c: added support for
+        font preloading with the '-p' flag.
+
         * src/ftdump.c: added dump of glyph count
 
 2006-04-26  David Turner <david@freetype.org>
