--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-05-12  Werner Lemberg  <wl@gnu.org>
+
+
+	* Version 2.2.1 released.
+	=========================
+
+
 2006-05-10  Werner Lemberg  <wl@gnu.org>
 
 	* Makefile (clean distclean) [no_config_mk]: Fix warning message.
