--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-17  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftcommon.c, src/ftview.c [_WIN32]: Define `strcasecmp' and
+	`snprintf'.
+
 2006-05-17  yi luo  <luoyi.ly@gmail.com>
 
 	* graph/win32/rules.mk: Add support for icl compiler.
