--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-21  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftdump.c (Print_Type): Fix type for `module'.  Reported by
+	Mark Wang.
+
 2006-05-17  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftcommon.c, src/ftview.c [_WIN32]: Define `strcasecmp' and
