--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-09  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftcommon.c (FTDemo_Install_Font): Fix index range for MS
+	Symbol.
+
 2006-06-07  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftcommon.c (FTDemo_Display_Done, FTDemo_Done): Protect against
