--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,15 @@
+2006-09-01  David Turner  <david@freetype.org>
+
+        * graph/gblcolor.h, graph/gblender.c, graph/gblhbgr.h,
+        graph/gblhrgb.h, graph/gblvbgr.h, graph/gblvrgb.h:
+        fixing last bugs in the glyph blender/blitter
+
+
 2006-07-03  Masatake YAMATO  <jet@gyve.org>
 
 	* src/ftvalid.c (library): Move this global variable to main as
 	a local variable.
-	(print_usage): Introduce function static variable 
+	(print_usage): Introduce function static variable
 	"library"; and added one argument for initializing the static variable.
 	(main): Call print_usage with `library'.
 	(main, else, parse_table_specs, find_validation_flag): Call print_usage
@@ -28,8 +35,8 @@
 	(is_ckern_validator_implemented): New function.
 	(run_ckern_validator): Use validators.
 	(main): Initialize library at the beginning of main.
-	Use validators. Report messages and exit if the validator 
-	specified by command line is not implemented in libfreetype2 
+	Use validators. Report messages and exit if the validator
+	specified by command line is not implemented in libfreetype2
 	linked to ftvalid.  Suggested by George Williams.
 
 
