* src/ftbench.c: adding a benchmark for the emboldening algorithm

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-10-23  Zhe Su  <zsu@novell.com>
+
+	* src/ftbench.c: adding a benchmark for the emboldening algorithm
+
+2006-10-23  David Turner   <david@freetype.org>
+
+	* src/ftgrid.c: make the file compile again :-)
+
 2006-10-11  suzuki toshiya  <mpsuzuki@hiroshima-u.ac.jp>
 
 	* mac/ftoldmac.c (print_help): Renamed to...
