* graph/x11/rules.mk: updating the X11 path detection rules         so they work when the headers and libraries are available from         /usr, instead of some fancy directory like /usr/X11R6 (which doesn't         exist on recent distros shipping with X.Org)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-11-15  David Turner  <david@freetype.org>
+
+        * graph/x11/rules.mk: updating the X11 path detection rules
+        so they work when the headers and libraries are available from
+        /usr, instead of some fancy directory like /usr/X11R6 (which doesn't
+        exist on recent distros shipping with X.Org)
+
 2006-11-03  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftgrid.c: Fix external function declarations.
