--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-01-17  Werner Lemberg  <wl@gnu.org>
+
+
+	* Version 2.3.0 released.
+	=========================
+
+
+	Tag sources with `VER-2-3-0-FINAL'.
+
 2007-01-11  Masatake YAMATO  <jet@gyve.org>
 
 	* src/ftvalid.c (run_ot_validator, run_gx_validator,
