--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2007-01-31  Werner Lemberg  <wl@gnu.org>
+
+
+	* Version 2.3.1 released.
+	=========================
+
+
+	Tag sources with `VER-2-3-1-FINAL'.
+
+	* README: Updated.
+
 2007-01-17  Werner Lemberg  <wl@gnu.org>
 
 
