--- a/README
+++ b/README
@@ -8,8 +8,8 @@ WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING
   downloaded one  of the  stable FreeType 2  source packages  from our
   server, you most probably have to rename its directory, for example:
   
-    mv freetype-2.0.6 freetype2       on Unix
-    rename freetype-2.0.6 freetype2   on Windows
+    mv freetype-2.3.1 freetype2       on Unix
+    rename freetype-2.3.1 freetype2   on Windows
 
 WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING
 
@@ -55,3 +55,5 @@ WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING WARNING
 
     If necessary, adapt  the `TOP_DIR_2' variable to make it  point to
     the ft2demos source directory.
+
+--- end of README ---
