--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-12  David Turner  <david@freetype.org>
+
+	* src/ttdebug.c: refresh the TrueType debugger code
+
 2007-02-06  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	* src/ftstring.c (event_render_mode_change): Fix spelling.
