--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2007-03-09  Werner Lemberg  <wl@gnu.org>
+
+
+	* Version 2.3.2 released.
+	=========================
+
+
+	Tag sources with `VER-2-3-2'.
+
+	* README: Updated.
+
 2007-02-14  David Turner  <david@freetype.org>
 
 	* src/ttdebug.c: another refresh of the debugger. Minor improvements
